Data fetching through Ajax, more queries and graphs Added several new graphs. Switched to Ajax for data fetching instead of using template context variables. Switched to crappy dark theme to save my eyes.

--- a/covid/covid_app/templates/covid_app/base.html
+++ b/covid/covid_app/templates/covid_app/base.html
@@ -37,7 +37,8 @@
     {% block scripts %}
     {% endblock %}
 </head>
-<body class="w3-theme-l5">
+{#<body class="w3-theme-l5">#}
+<body>
 <!-- Navbar -->
 <div class="w3-top header">
     <div class="w3-bar w3-large header-content">
